<resources>
    <string name="app_name">MyMenuNavegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_horario">Horario</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_Add">Añadir Evento</string>
    <string name="menu_salir">Salir</string>
    <string name="mi_nombre">Tony Ávila Sánchez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>